@startuml diagrama

class Pantalla {
    - frame : Lista<Frame>
    + mostrarFrame(frame) : void
    
}

class ControlDeEnlazado {
    - frame1 : Frame
    - frame2 : Frame
    - frameRestante : Frame
    + establecerFrames(f1, f2) : void

}

class Frame {
    - pixels : Array<Pixel>
    - ancho : int
    - alto : int
    + obtenerPixel(x, y) : Pixel
    + establecerPixel(x, y) : void

}

class Pixel {
    - x : int
    - y : int
    - color : String
}

Pantalla "1" *-- "n" Frame
ControlDeEnlazado "1" o-- "n" Frame
Frame "n" *-- "n" Pixel

@enduml